--- a/nginx.conf
+++ b/nginx.conf
@@ -1,9 +1,23 @@
-server {
-    listen 8081;
-    server_name localhost;
+worker_processes auto;
 
-    location / {
-        root /usr/share/nginx/html;
-        index index.html;
+events {
+    worker_connections 1024;
+}
+
+http {
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
+
+    sendfile on;
+    keepalive_timeout 65;
+
+    server {
+        listen 8081;
+        server_name localhost;
+
+        location / {
+            root /usr/share/nginx/html;
+            index index.html;
+        }
     }
 }
